--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
-opencv-python == 4.5.3.56
-mediapipe == 0.8.7.2
+opencv-python == 4.9.0.80
+mediapipe == 0.10.14
+cvzone == 1.6.1
+tensorflow == 2.15.0
